--- a/sites/3_ef/index.html
+++ b/sites/3_ef/index.html
@@ -19,8 +19,7 @@
 	<link rel="stylesheet" href="css/icomoon.css">
 	<!-- Базовые стили CSS -->
 	<link rel="stylesheet" href="css/fonts.css">
-	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/media.css">
+	<link rel="stylesheet" href="css/main.min.css">
 	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
 
