--- a/sites/3_ef/index.html
+++ b/sites/3_ef/index.html
@@ -793,7 +793,7 @@
 	<!-- Magnific Popup JS -->
 	<script async src="libs/magnific-popup/jquery.magnific-popup.min.js"></script>
 	<!-- Базовые скрипты javascript -->
-	<script async src="js/main.js"></script>
+	<script async src="js/main.min.js"></script>
 	<script async src="portfolio-interface/pi.js"></script>
 	<script async src="js/lazysizes.min.js"></script>
 </body>
