--- a/sites/3_ef/index.html
+++ b/sites/3_ef/index.html
@@ -27,7 +27,7 @@
 	<!-- portfolio interface -->
 	<div class="yudevices lazybg">
 		<div class="yudevices__phone lazybg">
-			<iframe src="index_mobile.html"></iframe>
+			<!-- <iframe src="index_mobile.html"></iframe> -->
 		</div>
 	</div>
 	<div class="yuchoise">
