--- a/sites/3_ef/index.html
+++ b/sites/3_ef/index.html
@@ -9,7 +9,7 @@
 	<!-- Slick slider CSS -->
 	<link rel="stylesheet" href="libs/slick-slider/slick.css">
 	<!-- Magnific Popup CSS -->
-	<link rel="stylesheet" href="libs/magnific-popup/magnific-popup.css">
+	<!-- <link rel="stylesheet" href="libs/magnific-popup/magnific-popup.css"> -->
 	<!-- Icons-font -->
 	<link rel="stylesheet" href="css/icomoon.css">
 	<!-- Базовые стили CSS -->
@@ -786,7 +786,7 @@
 	<!-- Slick slider JS -->
 	<script async src="libs/slick-slider/slick.min.js"></script>
 	<!-- Magnific Popup JS -->
-	<script async src="libs/magnific-popup/jquery.magnific-popup.min.js"></script>
+	<!-- <script async src="libs/magnific-popup/jquery.magnific-popup.min.js"></script>-->
 	<!-- Базовые скрипты javascript -->
 	<script async src="js/main.min.js"></script>
 	<script async src="portfolio-interface/pi.js"></script>
