ef минифицированны скрипты и стили

--- a/sites/3_ef/index.html
+++ b/sites/3_ef/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="css/icomoon.css">
 	<!-- Базовые стили CSS -->
 	<link rel="stylesheet" href="css/fonts.css">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/main.min.css">
 	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
 
@@ -792,7 +792,7 @@
 	<!-- Slick slider JS -->
 	<script async src="libs/slick-slider/slick.min.js"></script>
 	<!-- Базовые скрипты javascript -->
-	<script async src="js/main.js"></script>
+	<script async src="js/main.min.js"></script>
 	<script async src="portfolio-interface/pi.js"></script>
 	<script async src="js/lazysizes.min.js"></script>
 </body>
