заменена структура основной папки

--- a/index.html
+++ b/index.html
@@ -3,31 +3,100 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="favicon.png" type="image/x-icon">
-	<title>Портфолио Юрия Романова</title>
-	<!-- Slick slider CSS -->
-	<link rel="stylesheet" href="libs/slick-slider/slick.css">
-	<!-- Magnific Popup CSS -->
-	<link rel="stylesheet" href="libs/magnific-popup/magnific-popup.css">
-	<!-- Google Fonts Manrope -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600&display=swap" rel="stylesheet">
-	<!-- Animate CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-	<!-- Базовые стили CSS -->
-	<link rel="stylesheet" href="main.css">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="libs/swiper/swiper-bundle.min.css">
+	<link rel="stylesheet" href="css/main.css">
+	<title>Document</title>
 </head>
 
 <body>
-	<div class="links">
-		<a href="sites/1_new-lex/index.html" target="_blank">New lex</a>
-		<a href="sites/2_oksy-matthews/index.html" target="_blank">Oksy matthews</a>
-		<a href="sites/3_ef/index.html" target="_blank">Fulfilment</a>
-		<a href="sites/4_fvoice/index.html" target="_blank">Fvoice</a>
-		<a href="sites/7_per/index.html" target="_blank">Per</a>
+
+	<div class="description">
+		<div class="logo">Юрий Романов</div>
+		<p>Потрогай мои сайты. <br> Скролл вниз, чтобы листать</p>
 	</div>
+
+	<div class="swiper slider slider_main">
+		<div class="swiper-wrapper slier__wrapper">
+
+			<div class="swiper-slide slider__item">
+				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(previews/1.jpg);">
+				</div>
+			</div>
+			<div class="swiper-slide slider__item">
+				<div class="slider__img" data-swiper-parallax="30%" style="background-image: url(previews/2.jpg);">
+				</div>
+			</div>
+			<div class="swiper-slide slider__item">
+				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(previews/3.jpg);">
+				</div>
+			</div>
+			<div class="swiper-slide slider__item">
+				<div class="slider__img" data-swiper-parallax="30%" style="background-image: url(previews/4.jpg);">
+				</div>
+			</div>
+			<div class="swiper-slide slider__item">
+				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(previews/5.jpg);">
+				</div>
+			</div>
+			<div class="swiper-slide slider__item">
+				<div class="slider__img" data-swiper-parallax="30%" style="background-image: url(previews/6.jpg);">
+				</div>
+			</div>
+			<div class="swiper-slide slider__item">
+				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(previews/7.jpg);">
+				</div>
+			</div>
+			<div class="swiper-slide slider__item">
+				<div class="slider__img" data-swiper-parallax="30%" style="background-image: url(previews/8.jpg);">
+				</div>
+			</div>
+			<div class="swiper-slide slider__item">
+				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(previews/9.jpg);">
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+	<div class="swiper slider slider_bg">
+		<div class="swiper-wrapper slier__wrapper">
+
+			<div class="swiper-slide slider__item">
+				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(images/1.jpg);"></div>
+			</div>
+			<div class="swiper-slide slider__item">
+				<div class="slider__img" data-swiper-parallax="30%" style="background-image: url(images/2.jpg);"></div>
+			</div>
+			<div class="swiper-slide slider__item">
+				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(images/3.jpg);"></div>
+			</div>
+			<div class="swiper-slide slider__item">
+				<div class="slider__img" data-swiper-parallax="30%" style="background-image: url(images/4.jpg);"></div>
+			</div>
+			<div class="swiper-slide slider__item">
+				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(images/5.jpg);"></div>
+			</div>
+			<div class="swiper-slide slider__item">
+				<div class="slider__img" data-swiper-parallax="30%" style="background-image: url(images/6.jpg);"></div>
+			</div>
+			<div class="swiper-slide slider__item">
+				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(images/7.jpg);"></div>
+			</div>
+			<div class="swiper-slide slider__item">
+				<div class="slider__img" data-swiper-parallax="30%" style="background-image: url(images/8.jpg);"></div>
+			</div>
+			<div class="swiper-slide slider__item">
+				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(images/9.jpg);"></div>
+			</div>
+
+		</div>
+	</div>
+
+	<script src="libs/swiper/swiper-bundle.min.js"></script>
+	<script src="js/app.js"></script>
+
 </body>
 
 </html>
