--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="libs/swiper/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/main.css">
-	<title>Document</title>
+	<title>Юрий Романов</title>
 </head>
 
 <body>
 
 	<div class="description">
-		<div class="logo">Юрий Романов</div>
-		<p>Потрогай мои сайты. <br> Скролл вниз, чтобы листать</p>
+		<div class="logo">Портфолио</div>
+		<p>Юрий Романов. <br>Скролл вниз, чтобы листать</p>
 	</div>
 
 	<div class="swiper slider slider_main">
 		<div class="swiper-wrapper slier__wrapper">
 
 			<div class="swiper-slide slider__item">
-				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(previews/1.jpg);">
+				<div class="slider__img" data-swiper-parallax="20%" style="background-image: url(previews/1-8.jpg);">
 				</div>
 			</div>
 			<div class="swiper-slide slider__item">
