добавлена ссылка на все ссылки

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 <body>
 
+	<a target="_blank" href="sites/">страницы</a>
+
+
 	<div class="description">
 		<div class="logo">Портфолио</div>
 		<p>Юрий Романов. <br>Скролл вниз, чтобы листать</p>
