ef - вынесен скрипт lazy iframes в один файл

--- a/sites/3_ef/index.html
+++ b/sites/3_ef/index.html
@@ -791,7 +791,11 @@
 	<!-- Базовые скрипты javascript -->
 	<script async src="js/main.js"></script>
 	<script async src="portfolio-interface/pi.js"></script>
+
+	<!-- lazy load для изображений -->
 	<script async src="js/lazysizes.min.js"></script>
+	<!-- lazy load для iframe -->
+	<script async src="js/lazy-iframes.js"></script>
 </body>
 
 </html>
