убрана пока возможность смотреть сайты через телефон

--- a/sites/2_oksy-matthews/index.html
+++ b/sites/2_oksy-matthews/index.html
@@ -16,10 +16,10 @@
 	<link rel="stylesheet" href="css/main.min.css">
 	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
-<!-- portfolio interface -->
+<!-- portfolio interface
 <div class="yudevices">
 	<div class="yudevices__phone">
-		<!-- <iframe src="index_mobile.html"></iframe> -->
+		<iframe src="index_mobile.html"></iframe>
 	</div>
 </div>
 <div class="yuchoise">
@@ -32,7 +32,7 @@
 </div>
 <a href="../../index.html" target="_blank" class="yuchoise__menu">
 	<img data-src="portfolio-interface/more.svg" class="lazyload">
-</a>
+</a> -->
 <!-- portfolio interface -->
 
 <body class="main-body webp-support">
@@ -1027,7 +1027,6 @@
 		<div class="container">
 			<div class="contacts-wrapper">
 				<div class="contacts-map">
-					<!--
 					<div class="contacts-wrapper__script" style="position:relative;overflow:hidden;"><a
 							href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps"
 							style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a
@@ -1035,7 +1034,7 @@
 							style="color:#eee;font-size:12px;position:absolute;top:14px;">Крылатская улица, вл2с5 —
 							Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CCURnOVvpB" width="600"
 							height="550" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe>
-					</div>-->
+					</div>
 				</div>
 			</div>
 			<div class="contacts-content">
