--- a/sites/1_new-lex/index.html
+++ b/sites/1_new-lex/index.html
@@ -18,7 +18,7 @@
 	<link rel="stylesheet" href="css/media.css">
 	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
-<!-- portfolio interface -->
+<!-- portfolio interface
 <div class="yudevices lazyload" data-bgset="portfolio-interface/table-bg.jpg">
 	<div class="yudevices__phone lazyload" data-bgset="portfolio-interface/iphone.svg">
 		<iframe src="index_mobile.html"></iframe>
@@ -34,7 +34,7 @@
 </div>
 <a href="../../index.html" target="_blank" class="yuchoise__menu">
 	<img data-src="portfolio-interface/more.svg" class="lazyload">
-</a>
+</a> -->
 <!-- portfolio interface -->
 
 <body>
