ef - убрал интерфейс адаптива

--- a/sites/3_ef/index.html
+++ b/sites/3_ef/index.html
@@ -22,7 +22,7 @@
 </style>
 
 <body>
-	<!-- portfolio interface -->
+	<!-- portfolio interface
 	<div class="yudevices lazybg">
 		<div class="yudevices__phone lazybg piframe" data-mobile="index_mobile.html">
 		</div>
@@ -37,7 +37,7 @@
 	</div>
 	<a href="../../index.html" target="_blank" class="yuchoise__menu">
 		<img data-src="portfolio-interface/more.svg" class="lazyload">
-	</a>
+	</a> -->
 	<!-- portfolio interface -->
 	<!-- main -->
 	<section class="main lazybg">
@@ -690,7 +690,6 @@
 				data-map="https://yandex.ru/map-widget/v1/?um=constructor%3A518484330e952f88799773125f58c51337c75d7e84b4623c34df38ac5e5f4532&amp;source=constructor">
 			</div>
 		</div>
-		<!--
 		<div class="cont__map cont__map--office">
 			<div style="position:relative;overflow:hidden;"><a
 					href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps"
@@ -699,7 +698,7 @@
 					style="color:#eee;font-size:12px;position:absolute;top:14px;">Михайловский проезд, 1с1 —
 					Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CCUNFZUQ3C" width="100%"
 					height="100%" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
-		</div>-->
+		</div>
 	</section>
 	<!-- popup -->
 	<div class="popup-wrapper modal-overlay">
