--- a/sites/4_fvoice/index.html
+++ b/sites/4_fvoice/index.html
@@ -26,7 +26,7 @@
 
 	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
-<!-- portfolio interface -->
+<!-- portfolio interface
 <div class="yudevices">
 	<div class="yudevices__phone">
 		<iframe src="index_mobile.html"></iframe>
@@ -42,7 +42,7 @@
 </div>
 <a href="../../index.html" target="_blank" class="yuchoise__menu">
 	<img src="portfolio-interface/more.svg">
-</a>
+</a> -->
 <!-- portfolio interface -->
 
 <body>
