сделана поддержка мобильной версии без index_mobile

--- a/site-preview/index.html
+++ b/site-preview/index.html
@@ -19,30 +19,78 @@
 		<div class="container">
 			<div class="logo">Портфолио</div>
 			<div class="sites__box">
-				<div class="site__item">
+				<a target="_blank" href="../sites/9_barter/index.html" class="site__item">
 					<div class="site__item-img">
-						<img src="img/">
+						<img src="img/barter-preview.jpg">
+					</div>
+					<div class="site__item-text">
+						barter
+					</div>
+				</a>
+				<a target="_blank" href="../sites/9_barter/index.html" class="site__item">
+					<div class="site__item-img">
+						<img src="img/noderun-preview.jpg">
+					</div>
+					<div class="site__item-text">
+						norerun
+					</div>
+				</a>
+				<a href="#" class="site__item">
+					<div class="site__item-img">
+						<img src="img/cartoon-bg.jpg">
 					</div>
 					<div class="site__item-text">
 						New Lex
 					</div>
-				</div>
-				<div class="site__item">
+				</a>
+				<a href="#" class="site__item">
 					<div class="site__item-img">
-						<img src="img/">
+						<img src="img/cartoon-bg.jpg">
 					</div>
 					<div class="site__item-text">
-						New Lex
+						Oksy metthews
 					</div>
-				</div>
-				<div class="site__item">
+				</a>
+				<a href="#" class="site__item">
 					<div class="site__item-img">
-						<img src="img/">
+						<img src="img/cartoon-bg.jpg">
 					</div>
 					<div class="site__item-text">
-						New Lex
+						Ef
 					</div>
-				</div>
+				</a>
+				<a href="#" class="site__item">
+					<div class="site__item-img">
+						<img src="img/cartoon-bg.jpg">
+					</div>
+					<div class="site__item-text">
+						Fvoice
+					</div>
+				</a>
+				<a href="#" class="site__item">
+					<div class="site__item-img">
+						<img src="img/cartoon-bg.jpg">
+					</div>
+					<div class="site__item-text">
+						Zalogkredit
+					</div>
+				</a>
+				<a href="#" class="site__item">
+					<div class="site__item-img">
+						<img src="img/cartoon-bg.jpg">
+					</div>
+					<div class="site__item-text">
+						atp
+					</div>
+				</a>
+				<a href="#" class="site__item">
+					<div class="site__item-img">
+						<img src="img/cartoon-bg.jpg">
+					</div>
+					<div class="site__item-text">
+						per
+					</div>
+				</a>
 			</div>
 		</div>
 	</section>
