--- a/sites/1_new-lex/index.html
+++ b/sites/1_new-lex/index.html
@@ -18,10 +18,10 @@
 	<link rel="stylesheet" href="css/media.css">
 	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
-<!-- portfolio interface
+<!-- portfolio interface-->
 <div class="yudevices lazyload" data-bgset="portfolio-interface/table-bg.jpg">
 	<div class="yudevices__phone lazyload" data-bgset="portfolio-interface/iphone.svg">
-		<iframe src="index_mobile.html"></iframe>
+		<iframe src="index.html"></iframe>
 	</div>
 </div>
 <div class="yuchoise">
@@ -31,11 +31,26 @@
 	<div class="yuchoise__item yuchoise__item--mobile">
 		<img data-src="portfolio-interface/smartphone-call.svg" class="lazyload">
 	</div>
+	<a href="../../index.html" target="_blank" class="yuchoise__menu">
+		<img data-src="portfolio-interface/more.svg" class="lazyload">
+	</a>
 </div>
-<a href="../../index.html" target="_blank" class="yuchoise__menu">
-	<img data-src="portfolio-interface/more.svg" class="lazyload">
-</a> -->
+<script>
+	function iniFrame() {
+    if ( window.location !== window.parent.location )
+    {
+		let yuchoiseInterface = document.querySelector('.yuchoise');
+		yuchoiseInterface.classList.add('hidden');
+    }
+    // else {
+    //     document.write("The page is not in an iFrame");
+    // }
+}
+iniFrame();
+</script>
 <!-- portfolio interface -->
+
+
 
 <body>
 	<header class="header">
