--- a/sites/1_barter/index.html
+++ b/sites/1_barter/index.html
@@ -18,7 +18,6 @@
 	<link rel="stylesheet" rel="preload" href="css/main.min.css">
 	<link rel="stylesheet" rel="preload" href="css/myanims.min.css">
 	<!-- -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-scrollbar@latest/simple-scrollbar.css">
 	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
 <!-- portfolio interface-->
@@ -1291,8 +1290,7 @@
 	<script src="js/wow.min.js"></script>
 	<!-- Базовые скрипты javascript -->
 	<script src="js/main.js"></script>
-	<!-- -->
-	<script src="https://cdn.jsdelivr.net/npm/simple-scrollbar@latest/simple-scrollbar.min.js"></script>
+	<!-- portfolio interface -->
 	<script src="portfolio-interface/pi.js"></script>
 	<!-- wow js -->
 	<script>
