--- a/sites/2_new-lex/index.html
+++ b/sites/2_new-lex/index.html
@@ -16,6 +16,9 @@
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/media.css">
+
+	<!-- portfolio interface -->
+	<link rel="stylesheet" href="portfolio-interface/simplebar/simplebar.css">
 	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
 <!-- portfolio interface-->
@@ -1267,14 +1270,21 @@
 	<script async src="libs/slick-slider/slick.min.js"></script>
 	<!-- Magnific Popup JS -->
 	<script async src="libs/magnific-popup/jquery.magnific-popup.min.js"></script>
-	<!-- Wow js -->
-	<script src="js/wow.min.js"></script>
-	<script>new WOW().init();</script>
 	<!-- Базовые скрипты javascript -->
 	<script async src="js/main.js"></script>
-	<script async src="portfolio-interface/pi.js"></script>
 	<script async src="js/lazysizes.min.js"></script>
 	<script async src="js/ls.bgset.min.js"></script>
+	<!-- portfolio interface -->
+	<script src="portfolio-interface/simplebar/simplebar.js"></script>
+	<script src="portfolio-interface/pi.js"></script>
+	<!-- Wow js -->
+	<script src="js/wow.min.js"></script>
+	<script>
+		wow = new WOW({
+			scrollContainer: ".simplebar-content-wrapper"
+		});
+		wow.init();
+	</script>
 </body>
 
 </html>
