--- a/sites/3_ef/index.html
+++ b/sites/3_ef/index.html
@@ -13,8 +13,31 @@
 	<!-- Базовые стили CSS -->
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/main.min.css">
+	<link rel="stylesheet" href="portfolio-interface/simplebar/simplebar.css">
 	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
+<!-- portfolio interface-->
+<div class="yudevices lazyload" data-bgset="portfolio-interface/table-bg.jpg">
+	<div class="yudevices__phone lazyload" data-bgset="portfolio-interface/iphone.svg">
+		<iframe src="index.html"></iframe>
+	</div>
+</div>
+<div class="yuchoise">
+	<div class="yuchoise__item yuchoise__item--desk yuchoise__item--active">
+		<img data-src="portfolio-interface/desktop-icon.svg" class="lazyload">
+	</div>
+	<div class="yuchoise__item yuchoise__item--mobile">
+		<img data-src="portfolio-interface/smartphone-call.svg" class="lazyload">
+	</div>
+	<a href="../../index.html" target="_blank" class="yuchoise__menu">
+		<img data-src="portfolio-interface/more.svg" class="lazyload">
+	</a>
+</div>
+<!-- portfolio interface -->
+
+
+
+
 <style>
 	.lazybg {
 		background-image: none !important;
@@ -22,23 +45,6 @@
 </style>
 
 <body>
-	<!-- portfolio interface
-	<div class="yudevices lazybg">
-		<div class="yudevices__phone lazybg piframe" data-mobile="index_mobile.html">
-		</div>
-	</div>
-	<div class="yuchoise">
-		<div class="yuchoise__item yuchoise__item--desk yuchoise__item--active">
-			<img data-src="portfolio-interface/desktop-icon.svg" class="lazyload">
-		</div>
-		<div class="yuchoise__item yuchoise__item--mobile">
-			<img data-src="portfolio-interface/smartphone-call.svg" class="lazyload">
-		</div>
-	</div>
-	<a href="../../index.html" target="_blank" class="yuchoise__menu">
-		<img data-src="portfolio-interface/more.svg" class="lazyload">
-	</a> -->
-	<!-- portfolio interface -->
 	<!-- main -->
 	<section class="main lazybg">
 		<div class="sidebar-wrapper">
@@ -738,8 +744,6 @@
 	<script async src="libs/slick-slider/slick.min.js"></script>
 	<!-- Базовые скрипты javascript -->
 	<script async src="js/main.js"></script>
-	<script async src="portfolio-interface/pi.js"></script>
-
 	<!-- webp support -->
 	<script async src="js/webp-support.js"></script>
 	<!-- lazy load для изображений -->
@@ -748,7 +752,10 @@
 	<script async src="js/lazy-iframes.js"></script>
 	<!-- lazy bg -->
 	<script src="js/lazybg.js"></script>
-
+	<script src="js/ls.bgset.min.js"></script>
+	<!-- portfolio interface -->
+	<script src="portfolio-interface/simplebar/simplebar.js"></script>
+	<script async src="portfolio-interface/pi.js"></script>
 </body>
 
 </html>
