сделано 5 рабочих кейсов

--- a/site-preview/index.html
+++ b/site-preview/index.html
@@ -19,76 +19,44 @@
 		<div class="container">
 			<div class="logo">Портфолио</div>
 			<div class="sites__box">
-				<a target="_blank" href="../sites/9_barter/index.html" class="site__item">
+				<a target="_blank" href="../sites/1_barter/index.html" class="site__item">
 					<div class="site__item-img">
 						<img src="img/barter-preview.jpg">
 					</div>
 					<div class="site__item-text">
-						barter
+						Barter
 					</div>
 				</a>
-				<a target="_blank" href="../sites/9_barter/index.html" class="site__item">
+				<a target="_blank" href="../sites/2_new-lex/index.html" class="site__item">
 					<div class="site__item-img">
-						<img src="img/noderun-preview.jpg">
-					</div>
-					<div class="site__item-text">
-						norerun
-					</div>
-				</a>
-				<a href="#" class="site__item">
-					<div class="site__item-img">
-						<img src="img/cartoon-bg.jpg">
+						<img src="img/newlex-preview.png">
 					</div>
 					<div class="site__item-text">
 						New Lex
 					</div>
 				</a>
-				<a href="#" class="site__item">
+				<a target="_blank" href="../sites/3_ef/index.html" class="site__item">
 					<div class="site__item-img">
-						<img src="img/cartoon-bg.jpg">
+						<img src="img/ef-preview.png">
 					</div>
 					<div class="site__item-text">
-						Oksy metthews
+						EF
 					</div>
 				</a>
-				<a href="#" class="site__item">
+				<a target="_blank" href="../sites/4_per/index.html" class="site__item">
 					<div class="site__item-img">
-						<img src="img/cartoon-bg.jpg">
+						<img src="img/PER-preview.png">
 					</div>
 					<div class="site__item-text">
-						Ef
+						ПЭР
 					</div>
 				</a>
-				<a href="#" class="site__item">
+				<a target="_blank" href="../sites/5_oksy-matthews/index.html" class="site__item">
 					<div class="site__item-img">
-						<img src="img/cartoon-bg.jpg">
+						<img src="img/oksy-preview.png">
 					</div>
 					<div class="site__item-text">
-						Fvoice
-					</div>
-				</a>
-				<a href="#" class="site__item">
-					<div class="site__item-img">
-						<img src="img/cartoon-bg.jpg">
-					</div>
-					<div class="site__item-text">
-						Zalogkredit
-					</div>
-				</a>
-				<a href="#" class="site__item">
-					<div class="site__item-img">
-						<img src="img/cartoon-bg.jpg">
-					</div>
-					<div class="site__item-text">
-						atp
-					</div>
-				</a>
-				<a href="#" class="site__item">
-					<div class="site__item-img">
-						<img src="img/cartoon-bg.jpg">
-					</div>
-					<div class="site__item-text">
-						per
+						Oksy Matthews
 					</div>
 				</a>
 			</div>
