--- a/sites/4_per/index.html
+++ b/sites/4_per/index.html
@@ -28,7 +28,7 @@
 	<div class="yuchoise__item yuchoise__item--mobile">
 		<img data-src="portfolio-interface/smartphone-call.svg" class="lazyload">
 	</div>
-	<a href="../../index.html" target="_blank" class="yuchoise__menu">
+	<a href="../../site-preview/index.html" class="yuchoise__menu">
 		<img data-src="portfolio-interface/more.svg" class="lazyload">
 	</a>
 </div>
