убраны async у скриптов lazyload - barter

--- a/sites/1_barter/index.html
+++ b/sites/1_barter/index.html
@@ -1280,8 +1280,8 @@
 		</div>
 	</div>
 	<!-- lazysizes -->
-	<script async src='js/lazysizes.min.js'></script>
-	<script async src="js/ls.bgset.min.js"></script>
+	<script src='js/lazysizes.min.js'></script>
+	<script src="js/ls.bgset.min.js"></script>
 	<!-- simplebar -->
 	<script src='libs/simplebar/simplebar.js'></script>
 	<!-- swiper js -->
