--- a/sites/4_per/index.html
+++ b/sites/4_per/index.html
@@ -16,8 +16,8 @@
 	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
 <!-- portfolio interface-->
-<div class="yudevices lazyload" data-bgset="portfolio-interface/table-bg.jpg">
-	<div class="yudevices__phone lazyload" data-bgset="portfolio-interface/iphone.svg">
+<div class="yudevices lazyload" style="background-image: url('portfolio-interface/table-bg.jpg')">
+	<div class="yudevices__phone lazyload" style="background-image: url('portfolio-interface/iphone.svg')">
 		<iframe src="index.html"></iframe>
 	</div>
 </div>
