--- a/sites/1_barter/index.html
+++ b/sites/1_barter/index.html
@@ -22,7 +22,7 @@
 </head>
 <!-- portfolio interface-->
 <div class="yudevices lazyload" style="background-image: url('portfolio-interface/table-bg.jpg')">
-	<div class="yudevices__phone lazyload" style="background-image: url('portfolio-interface/iphone.svg')">
+	<div class="yudevices__phone lazyload" style="background-image: url('portfolio-interface/iphone.png')">
 		<iframe src="index.html"></iframe>
 	</div>
 </div>
