portfolio interface fix

--- a/sites/2_new-lex/index.html
+++ b/sites/2_new-lex/index.html
@@ -23,9 +23,9 @@
 </head>
 <!-- portfolio interface-->
 <div class="yudevices lazyload" style="background-image: url('portfolio-interface/table-bg.jpg')">
-	<div class="yudevices__phone lazyload" style="background-image: url('portfolio-interface/iphone.svg')">
-		<iframe src="index.html"></iframe>
+	<div class="yudevices__phone lazyload" style="background-image: url('portfolio-interface/iphone.png')">
 	</div>
+	<iframe src="index.html" class="pi-iframe"></iframe>
 </div>
 <div class="yuchoise">
 	<div class="yuchoise__item yuchoise__item--desk yuchoise__item--active">
